# jestir

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.bmad-core/: install-manifest.yaml
.cursor/rules/: dev-workflow.mdc
api/: README.md  index.js  package.json  test-runner.js  validate-api.py
api/examples/: basic-usage.js  web-server.js
api/test/: jestir-api.test.js
docs/: LightRAG-openapi.json  NEW_CONTEXT_GENERATOR_APPROACH.md  architecture.md  cli-reference.md  prd.md  template-testing-guide.md  token-tracking.md
docs/architecture/: 01-introduction.md  02-high-level-architecture.md  03-tech-stack.md  04-data-models.md  05-components.md  06-component-diagrams.md  07-external-apis.md  08-core-workflows.md  09-database-schema.md  10-source-tree.md  11-infrastructure-deployment.md  12-error-handling.md  13-coding-standards.md  14-test-strategy.md  15-security.md  16-next-steps.md
docs/prd/: 01-goals-background.md  02-requirements.md  03-ui-design-goals.md  04-technical-assumptions.md  05-epic-list.md  06-epic1-foundation.md  07-epic2-entity-management.md  08-epic3-advanced-features.md  09-checklist-next-steps.md
docs/qa/assessments/: 1.1-project-initialization-risk-20241219.md  1.2-context-generation-risk-20241219.md  1.3-outline-generation-risk-20241219.md  1.4-story-writing-pipeline-risk-20241219.md  2.1-lightrag-api-integration-risk-20241219.md  2.2-template-system-implementation-risk-20241219.md  2.3-entity-search-and-list-commands-risk-20241219.md  2.4-context-validation-command-risk-20241219.md  3.1-token-usage-tracking-risk-20241219.md  3.2-template-testing-and-preview-risk-20241219.md  3.3-story-length-control-risk-20241219.md  3.4-web-api-preparation-risk-20241219.md  3.5-batch-operations-support-risk-20241219.md
docs/qa/gates/: 1.1-project-initialization.yml  2.1-lightrag-api-integration.yml  2.2-template-system-implementation.yml  2.3-entity-search-and-list-commands.yml  2.4-context-validation-command.yml  3.1-token-usage-tracking.yml  3.2-template-testing-and-preview.yml  3.3-story-length-control.yml  3.4-completion-report.md  3.4-web-api-preparation.yml  3.5-batch-operations-support.yml
docs/stories/: 1.1-project-initialization.md  1.2-context-generation.md  1.3-outline-generation.md  1.4-story-writing-pipeline.md  1.5-end-to-end-pipeline-test.md  2.1-lightrag-api-integration.md  2.2-template-system-implementation.md  2.3-entity-search-and-list-commands.md  2.4-context-validation-command.md  3.1-token-usage-tracking.md  3.2-template-testing-and-preview.md  3.3-story-length-control.md  3.4-web-api-preparation.md  3.5-batch-operations-support.md
examples/: README.md  demo_entity_validation.py  demo_length_control.py  demo_story_2_3.py  demo_template_usage.py  demo_token_tracking.py
examples/context_examples/: basic_adventure.yaml
scripts/: dev-workflow.sh
src/jestir/: __init__.py  __main__.py  cli.py  security.py
src/jestir/models/: __init__.py  api_config.py  entity.py  length_spec.py  relationship.py  story_context.py  token_usage.py
src/jestir/services/: __init__.py  context_generator.py  context_validator.py  entity_validator.py  length_validator.py  lightrag_client.py  outline_generator.py  story_writer.py  template_debugger.py  template_loader.py  template_monitor.py  token_tracker.py
src/jestir/utils/: __init__.py  lightrag_config.py  logging_config.py
templates/: story_template.txt
templates/prompts/includes/: character_animal.txt  character_antagonist.txt  character_protagonist.txt  character_supporting.txt  location_exterior.txt  location_interior.txt  location_magical.txt  location_region.txt
templates/prompts/system_prompts/: context_extraction.txt  outline_generation.txt  story_generation.txt
templates/prompts/user_prompts/: context_extraction.txt  outline_generation.txt  story_generation.txt
tests/integration/: test_length_control_integration.py  test_lightrag_client.py  test_template_cli.py  test_token_tracking_cli.py
tests/performance/: test_template_performance.py  test_token_tracker_performance.py
tests/unit/: test_cli.py  test_context_generator.py  test_context_validator.py  test_entity_validator.py  test_error_messaging.py  test_length_spec.py  test_length_validator.py  test_models.py  test_outline_generator.py  test_story_writer.py  test_template_loader.py  test_template_monitoring.py  test_template_testing.py  test_token_models.py  test_token_tracker.py
