[project]
name = "jestir"
version = "0.1.0"
description = "AI-powered bedtime story generator with 3-stage pipeline"
authors = [
    {name = "Blake",email = "blake@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "openai (>=1.107.3,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "httpx (>=0.25.0,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)"
]

[project.scripts]
jestir = "jestir.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=0.25.0,<1.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.18.1,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
